--- a/app/globals.css
+++ b/app/globals.css
@@ -24,3 +24,7 @@ body {
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
 }
+Input,input, textarea,select,Select,p,div,span{
+  font-family: inherit;
+  color: black;
+}
